# crude-platform

./: .gitignore  CMakeLists.txt  README.md  dev.sh  devr.sh
include/: collisions.h  player.h
src/: collisions.cpp  main.cpp  player.cpp
